# a-train

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.cargo/: config.toml
.github/workflows/: cd.yml
scripts/: target.py
src/: autoscan.rs  config.rs  drive.rs  lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/src/commands/: ci.rs  dist.rs  docker.rs  mod.rs
