[package]
name = "a-train"
version = "0.1.0"
authors = ["Storm Timmermans <stormtimmermans@icloud.com>"]
edition = "2018"
build = "build.rs"
publish = false

[workspace]
members = ["xtask"]

[dependencies]
anyhow = "1"
bernard = { git = "https://github.com/m-rots/bernard-rs", branch = "main" }
clap = "3.0.0-beta.2"
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
snafu = "0.6"
toml = "0.5"
tokio = { version = "1", features = ["full"] }
# Still waiting for https://github.com/tokio-rs/tracing/issues/1309 to be backported.
tracing-subscriber = "0.2"
tracing = "0.1"

# Jemalloc for 64-bit MUSL as standard allocator has bad performance.
[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies]
jemallocator = { version = "0.4", package = "tikv-jemallocator" }

[build-dependencies]
# TODO: enable git
vergen = { version = "5", default-features = false, features = ["build"] }

[dev-dependencies]
pretty_assertions = "0.7"
serde_json = "1"
wiremock = "0.5"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1