[package]
name = "xtask"
version = "0.1.0"
authors = ["Storm Timmermans <stormtimmermans@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "3.0.0-beta.2"
colored = "2"
flate2 = "1"
once_cell = "1"
xshell = "0.1"